--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,8 +3,8 @@ name: Deploy static content to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  # push:
-  #  branches: ["dev"]
+  push:
+    branches: ["live"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
