--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -10,8 +10,8 @@ name: Lint Code Base
 # Start the job on all push #
 #############################
 on:
-  pull_request:
-    branches:
+  push:
+    branches-ignore:
       - main
 
 ###############
@@ -53,5 +53,6 @@ jobs:
         uses: super-linter/super-linter/slim@v5
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_ANSIBLE: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
